Commit Rmd and html files
Uploading the Rmd and html files for second time

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -12,7 +12,6 @@ knitr::opts_chunk$set(echo = TRUE)
 ### Loading and preprocessing the data
 
 Creating a data frame with the activity.csv
-
 ```{r load}
 activityDF<-read.table("activity.csv",sep = ",",header = TRUE)
 head(activityDF)
@@ -21,20 +20,14 @@ head(activityDF)
 ### What is mean total number of steps taken per day?
 
 First, it's necessary to sum all steps for each day (missing values are ingnored)
-
 ```{r}
 totalByDay<-tapply(activityDF$steps,activityDF$date,FUN = sum,na.rm=TRUE)
 head(totalByDay)
 ```
 
 Histogram of the total number steps per day:
-
 ```{r}
 hist(totalByDay,main = "Histogram of Total of Steps per Day",xlab="Steps")
-  abline(v=mean(totalByDay),col="blue",lty=2)
-  abline(v=median(totalByDay),col="red",lty=2)
-  legend("topright",legend=c(paste("Mean:",round(mean(totalByDay))),paste("Median:",median(totalByDay))),col = c("blue","red"),lty = 2,lwd=2)
-
 ```
 
 The mean of total steps per day is : 
@@ -55,7 +48,6 @@ head(avgByInterval)
 ```
 
 Plotting results:
-
 ```{r}
 plot(avgByInterval,type="l",xlab = "Interval position",ylab = "Average")
 abline(v=which.max(avgByInterval),col="blue",lty=2)
@@ -71,7 +63,6 @@ avgByInterval[which.max(avgByInterval)]
 
 The presence of missing days may introduce bias into some calculations or summaries of the data.
 Total number of missing values in the dataset:
-
 ```{r}
 sum(is.na(activityDF$steps))
 ```
@@ -95,25 +86,19 @@ head(newTotalByDay)
 ```
 
 Histogram of the total number steps per day:
-
 ```{r}
 hist(newTotalByDay,main = "Histogram of Total of Steps per Day",xlab="Steps")
-  abline(v=mean(newTotalByDay),col="blue",lty=2)
-  abline(v=median(newTotalByDay),col="red",lty=2)
-  legend("topright",legend=c(paste("Mean:",round(mean(newTotalByDay))),paste("Median:",median(newTotalByDay))),col = c("blue","red"),lty = 2,lwd=2)
-
 ```
 
-**What is the impact of imputing missing data on the estimates of the total daily number of steps?** Now the mean and median are higher than before.
+**Now the mean and median are higher than before.**
 ```{r}
-mean(totalByDay)
 mean(newTotalByDay)
+median(newTotalByDay)
 ```
 
 ##Are there differences in activity patterns between weekdays and weekends?
 
 Creating two level factor variable called weekday using the dataset with missing values fixed
-
 ```{r}
 newActivityDF$date<-as.POSIXct(strptime(newActivityDF$date, "%Y-%m-%d"))
 newActivityDF$weekday<-"weekday"
@@ -123,7 +108,6 @@ head(newActivityDF)
 ```
 
 Creating 2 dataset with the mean of steps by interval, one for weekdays and the other for weekend
-
 ```{r}
 subWeekDF<-aggregate(steps~interval,subset(newActivityDF,newActivityDF$weekday=="weekday"),FUN = mean) 
 subWeekendDF<-aggregate(steps~interval,subset(newActivityDF,newActivityDF$weekday=="weekend"),FUN = mean)
@@ -133,17 +117,14 @@ subWeekendDF$weekday<-"weekend"
 ```
 
 Merging the datasets with the average
-
 ```{r}
 weekDayDF<-rbind(subWeekDF,subWeekendDF)
 head(weekDayDF)
 ```
 
 Plotting the mean of intervals separated by weekday
-
 ```{r}
 library(ggplot2)
 gp<-ggplot(data = weekDayDF,aes(interval,steps))
 gp+geom_line()+facet_grid(.~weekday)+ylim(0,250)+ggtitle("Average number of steps by interval")
 ```
-
